# SCPI

./: .gitignore  README.md  arbitrary_signal.py  ohms_law.py  pyproject.toml  superposition.py
experiment_proof/: step4_experiment_setup.heic
scripts/: arbitrary_signal.py  gopal_vishy_arbitrary_signal.py  gopal_vishy_ohms_law.py  gopal_vishy_superposition.py  ohms_law.py  superposition.py
sketch_apr22a/: gopal_vishy_SCPI_interface.ino  sketch_apr22a.ino
